src/info.log
/bin/sh: 1: llvm-config: not found
/bin/sh: 1: llvm-config: not found
main.cpp:9:8: error: ‘BlockNode’ does not name a type
    9 | extern BlockNode* programBlock;
      |        ^~~~~~~~~
main.cpp: In function ‘int main(int, const char**)’:
main.cpp:53:10: error: conflicting declaration ‘auto it’
   53 |     auto it = argMap.find("o");
      |          ^~
main.cpp:46:10: note: previous declaration as ‘std::_Rb_tree_iterator<std::pair<const std::__cxx11::basic_string<char>, std::__cxx11::basic_string<char> > > it’
   46 |     auto it = argMap.find("i");
      |          ^~
main.cpp:75:22: error: ‘programBlock’ was not declared in this scope
   75 |     generator->GenIR(programBlock,OutputObjectFile);
      |                      ^~~~~~~~~~~~
make: *** [Makefile:19: main.o] Error 1
